Ensure dropdown-container is not visible

--- a/src/styles.styl
+++ b/src/styles.styl
@@ -83,6 +83,7 @@
 
 #ractive-select-dropdown-container
     position absolute
+    left -9999px
     .dropdown
         position fixed
         left -9999px
